--- a/.env.example
+++ b/.env.example
@@ -1,26 +1,40 @@
+# Database Configuration
+DB_HOST=localhost
+DB_PORT=5432
+DB_NAME=opinian
+DB_USER=postgres
+DB_PASSWORD=your_password_here
+
 # Flask Configuration
 FLASK_ENV=development
-SECRET_KEY=your-secret-key-here-change-in-production
+FLASK_DEBUG=True
+SECRET_KEY=your_secret_key_here
 
-# Database Configuration
-# For SQLite (default):
-# DATABASE_URL=sqlite:///instance/opinian.db
+# JWT Configuration
+JWT_SECRET_KEY=your_jwt_secret_key_here
+JWT_ACCESS_TOKEN_EXPIRES=3600
 
-# For PostgreSQL (production):
-# DATABASE_URL=postgresql://username:password@localhost/opinian
+# File Upload Configuration
+UPLOAD_FOLDER=uploads
+MAX_CONTENT_LENGTH=10485760
+ALLOWED_EXTENSIONS=png,jpg,jpeg,gif,webp
 
-# For MySQL:
-# DATABASE_URL=mysql://username:password@localhost/opinian
+# API Configuration
+LLM_API_KEY=your_llm_api_key_here
+LLM_API_URL=https://api.example.com/v1
 
-# AI API Keys (Optional - can also be configured in admin panel)
-OPENAI_API_KEY=your-openai-api-key-here
-ANTHROPIC_API_KEY=your-anthropic-api-key-here
-HUGGINGFACE_API_KEY=your-huggingface-api-key-here
+# Email Configuration (optional)
+MAIL_SERVER=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USE_TLS=True
+MAIL_USERNAME=your_email@gmail.com
+MAIL_PASSWORD=your_email_password
 
-# Application Settings
-POSTS_PER_PAGE=10
-COMMENTS_PER_PAGE=20
-MAX_CONTENT_LENGTH=16777216
+# Security Configuration
+BCRYPT_LOG_ROUNDS=12
 
 # Session Configuration
-PERMANENT_SESSION_LIFETIME=604800
+SESSION_TYPE=filesystem
+SESSION_FILE_DIR=flask_session
+SESSION_PERMANENT=False
+PERMANENT_SESSION_LIFETIME=3600
