Add comprehensive User Management documentation and implement admin templates
- Created USER_MANAGEMENT.md to outline user roles, creation methods, workflows, and security best practices.
- Developed admin templates for activity logs, API settings, user creation, user editing, group management, moderation queue, and user management.
- Enhanced admin dashboard with statistics and quick actions for better user management experience.
- Implemented JavaScript functionality for user banning/unbanning in the users management template.

--- a/.env.example
+++ b/.env.example
@@ -38,3 +38,25 @@ SESSION_TYPE=filesystem
 SESSION_FILE_DIR=flask_session
 SESSION_PERMANENT=False
 PERMANENT_SESSION_LIFETIME=3600
+
+# ============================================================
+# SuperAdmin Initial Setup (OPTIONAL - For Automated Deployment)
+# ============================================================
+# SECURITY WARNING: These credentials are used ONLY for automated
+# SuperAdmin creation during init_db.py
+#
+# For LOCAL DEVELOPMENT: Leave these commented out!
+#   - When you run init_db.py, it will prompt you interactively
+#   - You choose your own credentials and must remember them
+#
+# For SERVER/CI-CD: Uncomment and set secure values
+#   - Use strong, unique passwords
+#   - Never commit the actual .env file to git
+#   - Use secrets management in production (AWS Secrets, Azure Key Vault, etc.)
+# ============================================================
+
+SUPERADMIN_USERNAME=admin
+SUPERADMIN_EMAIL=admin@example.com
+SUPERADMIN_PASSWORD=sup49@1aD!
+SUPERADMIN_FIRST_NAME=Super
+SUPERADMIN_LAST_NAME=Admin
