--- a/.env.example
+++ b/.env.example
@@ -57,6 +57,6 @@ PERMANENT_SESSION_LIFETIME=3600
 
 SUPERADMIN_USERNAME=admin
 SUPERADMIN_EMAIL=admin@example.com
-SUPERADMIN_PASSWORD=sup49@1aD!
+SUPERADMIN_PASSWORD=your_password_here
 SUPERADMIN_FIRST_NAME=Super
 SUPERADMIN_LAST_NAME=Admin
