feat: Implement core blogging features, user authentication with password reset, admin panel, AI assistant, and search functionality.

--- a/.env.example
+++ b/.env.example
@@ -19,16 +19,24 @@ UPLOAD_FOLDER=uploads
 MAX_CONTENT_LENGTH=10485760
 ALLOWED_EXTENSIONS=png,jpg,jpeg,gif,webp
 
-# API Configuration
-LLM_API_KEY=your_llm_api_key_here
-LLM_API_URL=https://api.example.com/v1
+# API Configuration (OpenAI)
+OPENAI_API_KEY=your_llm_api_key_here
+OPENAI_MODEL=gpt-4o-mini
+OPENAI_MAX_TOKENS=2000
 
 # Email Configuration (optional)
+# For port 465 (SSL): Set MAIL_USE_SSL=True and MAIL_USE_TLS=False
+# For port 587 (TLS): Set MAIL_USE_SSL=False and MAIL_USE_TLS=True
+# Examples: Hostinger uses 465 (SSL), Gmail uses 587 (TLS)
 MAIL_SERVER=smtp.gmail.com
 MAIL_PORT=587
 MAIL_USE_TLS=True
+MAIL_USE_SSL=False
 MAIL_USERNAME=your_email@gmail.com
 MAIL_PASSWORD=your_email_password
+MAIL_DEFAULT_SENDER=noreply@opinian.com
+ADMIN_EMAIL=admin@opinian.com
+APP_URL=http://localhost:5000
 
 # Security Configuration
 BCRYPT_LOG_ROUNDS=12
@@ -38,6 +46,12 @@ SESSION_TYPE=filesystem
 SESSION_FILE_DIR=flask_session
 SESSION_PERMANENT=False
 PERMANENT_SESSION_LIFETIME=3600
+
+SUPERADMIN_USERNAME=user
+SUPERADMIN_EMAIL=user@example.com
+SUPERADMIN_PASSWORD=pass
+SUPERADMIN_FIRST_NAME=fname
+SUPERADMIN_LAST_NAME=lname
 
 # ============================================================
 # SuperAdmin Initial Setup (OPTIONAL - For Automated Deployment)
