--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 Flask==2.3.3
 Flask-CORS==4.0.0
+Flask-Mail==0.9.1
 psycopg2-binary==2.9.7
 python-dotenv==1.0.0
 PyJWT==2.8.0
@@ -9,3 +10,4 @@ requests==2.31.0
 Pillow==10.0.0
 Jinja2==3.1.2
 openai>=1.30.0
+python-docx==1.1.0
